# Black-Hole-Visualization-in-Two-Dimensional-Space

./: .gitignore  README.md  blackHole.py  compileShader.py  createProgram.py  lineGenerator.py  main copy 2.py  main copy.py  main.py  midPointCircle.py  photonGenerator.py  pyproject.toml  rotateScale.py  toNVC.py  vertexArrayBinder.py
